# computer-vision-project-

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: calibration.yaml  linear_probe.yaml  local_smoke.yaml  lora_finetune.yaml
docs/superpowers/specs/: 2026-07-02-lejepa-tissue-classifier-design.md
notebooks/: colab_finetune.ipynb
outputs/: jepa-vs-traditional-cv-ml-research-benchmarks.md  jepa-vs-traditional-cv-ml-research-foundation-models.md  jepa-vs-traditional-cv-ml-research-histopath.md  jepa-vs-traditional-cv-ml-research-regime.md  jepa-vs-traditional-cv-ml-research-risks.md  jepa-vs-traditional-cv-ml-research-theory.md  jepa-vs-traditional-cv-ml-verification.md  jepa-vs-traditional-cv-ml.md  jepa-vs-traditional-cv-ml.provenance.md
outputs/.drafts/: jepa-vs-traditional-cv-ml-cited.md  jepa-vs-traditional-cv-ml-draft.md
outputs/.plans/: jepa-vs-traditional-cv-ml.md
scripts/: download_data.sh  run_cloud_train.py  run_local_smoke.py
scripts/gcp/: 00_preflight.sh  01_budget_alert.sh  02_upload_data.sh  03_create_vm.sh  04_deploy_and_run.sh  05_watchdog.sh  06_monitor.sh  07_teardown.sh  _lib.sh  _remote_bootstrap.sh
src/tissue_classifier/: config.py  data.py  finetune.py  foundation_model.py  metrics.py  probe.py
tests/: test_config.py  test_configs.py  test_data.py  test_download_script.py  test_finetune.py  test_foundation_model.py  test_metrics.py  test_probe.py  test_run_cloud_train.py  test_run_local_smoke.py  test_scaffolding.py
